# usdronestrikes

./: README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  strikemodel.py
backend/: settings.py  urls.py
public/: index.html  manifest.json
src/: App.css  App.js  index.css  index.js
src/components/: Navigation.js  civilianCount.js  datamap.js  presChart.js  yearChart.js
src/pages/: Home.js  contribute.js
src/store/: reducer.js
src/store/actions/: getStrikes.js
src/utils/: API.js
strikesapi/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
strikesapi/migrations/: 0001_initial.py  0002_auto_20210308_1921.py  0003_remove_strikesdata_unnamed_12.py  0004_auto_20210311_1926.py  0005_presdata.py  0006_presdata_yearsinoffice.py  0007_auto_20210314_2211.py  0008_delete_presidentdata.py  0009_presidentdata.py  0010_auto_20210314_2217.py  0011_auto_20210314_2218.py  0012_auto_20210314_2220.py  0013_delete_commanderinchief.py  0014_commanderinchief.py  0015_strikesbyyear.py  0016_contributedata.py  0017_auto_20210316_0521.py  0018_delete_contributedata.py  0019_contributedata.py  0020_auto_20210316_0526.py  0021_auto_20210316_1926.py
